fix styling on mobile

--- a/src/app/average-stars/average-stars.component.scss
+++ b/src/app/average-stars/average-stars.component.scss
@@ -1,10 +1,13 @@
-#average-stars {
-  display: block;
-  position: relative;
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {
+  #average-stars {
+    display: block;
+    position: relative;
 
-  #average-stars-text {
-    position: absolute;
-    margin-top: 5px;
-    margin-left: 5px;
+    #average-stars-text {
+      position: absolute;
+      margin-top: 5px;
+      margin-left: 5px;
+    }
   }
 }
